--- a/client/src/app/pages/login/login.component.html
+++ b/client/src/app/pages/login/login.component.html
@@ -25,7 +25,8 @@
           <a class="login-form-forgot">Forgot password</a>
         </div>
       </div>
-      <button nz-button class="login-form-button login-form-margin" [nzType]="'primary'" [nzLoading]="isLoading">Log in</button>
+      <button nz-button class="login-form-button login-form-margin" [nzType]="'primary'" [nzLoading]="isLoading()">Log
+        in</button>
       Or <a routerLink="/register">register now!</a>
     </form>
   </nz-card>
