--- a/client/src/app/pages/register/register.component.html
+++ b/client/src/app/pages/register/register.component.html
@@ -35,7 +35,7 @@
             </nz-form-item>
 
             <button nz-button class="register-form-button login-form-margin" [nzType]="'primary'"
-                [nzLoading]="isLoading">Register</button>
+                [nzLoading]="isLoading()">Register</button>
             Or <a routerLink="/login">login now!</a>
         </form>
     </nz-card>
