Refactor user routes, add API docs, and fix unit tests

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -5,7 +5,7 @@
                 <div class="logo-icon">
                     <span nz-icon nzType="home" nzTheme="fill"></span>
                 </div>
-                <span class="app-name">PropManager</span>
+                <span class="app-name">EstateFlow</span>
             </div>
 
             <ul nz-menu nzMode="horizontal" class="nav-menu">
