feat: enhance UX/UI and add image upload validation

--- a/client/src/app/pages/create-issue/create-issue.component.html
+++ b/client/src/app/pages/create-issue/create-issue.component.html
@@ -1,64 +1,59 @@
 <div class="create-issue-container">
-    <div class="form-wrapper">
-        <div class="page-header">
-            <h1>Report a New Issue</h1>
-            <p>Fill in the details below to submit a maintenance request.</p>
-        </div>
+    <div class="form-wrapper glass-panel">
+        <form nz-form [formGroup]="issueForm" (ngSubmit)="submitForm()" nzLayout="vertical">
+            <nz-form-item>
+                <nz-form-label nzRequired nzFor="title">Issue Title</nz-form-label>
+                <nz-form-control nzErrorTip="Please input the title!">
+                    <input nz-input formControlName="title" id="title" placeholder="e.g., Leaking Faucet in Kitchen"
+                        nzSize="large" />
+                </nz-form-control>
+            </nz-form-item>
 
-        <nz-card [nzBordered]="false" class="issue-card">
-            <form nz-form [formGroup]="issueForm" (ngSubmit)="submitForm()" nzLayout="vertical">
-                <nz-form-item>
-                    <nz-form-label nzRequired nzFor="title">Issue Title</nz-form-label>
-                    <nz-form-control nzErrorTip="Please input the title!">
-                        <input nz-input formControlName="title" id="title" placeholder="e.g., Leaking Faucet in Kitchen"
-                            nzSize="large" />
-                    </nz-form-control>
-                </nz-form-item>
+            <nz-form-item>
+                <nz-form-label nzRequired nzFor="description">Description</nz-form-label>
+                <nz-form-control nzErrorTip="Please input the description!">
+                    <textarea nz-input formControlName="description" id="description" rows="6"
+                        placeholder="Provide detailed information about the issue..." nzSize="large"></textarea>
+                </nz-form-control>
+            </nz-form-item>
 
-                <nz-form-item>
-                    <nz-form-label nzRequired nzFor="description">Description</nz-form-label>
-                    <nz-form-control nzErrorTip="Please input the description!">
-                        <textarea nz-input formControlName="description" id="description" rows="6"
-                            placeholder="Provide detailed information about the issue..." nzSize="large"></textarea>
-                    </nz-form-control>
-                </nz-form-item>
-
-                <div nz-row [nzGutter]="24">
-                    <div nz-col [nzSpan]="12" [nzXs]="24">
-                        <nz-form-item>
-                            <nz-form-label nzRequired nzFor="priority">Priority Level</nz-form-label>
-                            <nz-form-control nzErrorTip="Please select priority!">
-                                <nz-select formControlName="priority" id="priority" nzPlaceHolder="Select Priority"
-                                    nzSize="large">
-                                    <nz-option *ngFor="let p of priorities" [nzValue]="p" [nzLabel]="p"></nz-option>
-                                </nz-select>
-                            </nz-form-control>
-                        </nz-form-item>
-                    </div>
-                    <div nz-col [nzSpan]="12" [nzXs]="24">
-                        <nz-form-item>
-                            <nz-form-label nzFor="image">Attachments (Optional)</nz-form-label>
-                            <nz-form-control>
-                                <nz-upload [nzBeforeUpload]="beforeUpload" [(nzFileList)]="fileList" [nzMultiple]="true"
-                                    [nzLimit]="5">
-                                    <button nz-button type="button" nzSize="large" style="width: 100%;">
-                                        <span nz-icon nzType="upload"></span>
-                                        Upload Images (Max 5)
-                                    </button>
-                                </nz-upload>
-                            </nz-form-control>
-                        </nz-form-item>
-                    </div>
-                    <div nz-col [nzSpan]="24">
-                        <nz-form-item>
-                            <nz-form-control>
-                                <button nz-button nzType="primary" [nzLoading]="isLoading()" htmlType="submit">Submit
-                                    Issue</button>
-                            </nz-form-control>
-                        </nz-form-item>
-                    </div>
+            <div nz-row [nzGutter]="24">
+                <div nz-col [nzSpan]="12" [nzXs]="24">
+                    <nz-form-item>
+                        <nz-form-label nzRequired nzFor="priority">Priority Level</nz-form-label>
+                        <nz-form-control nzErrorTip="Please select priority!">
+                            <nz-select formControlName="priority" id="priority" nzPlaceHolder="Select Priority"
+                                nzSize="large">
+                                <nz-option *ngFor="let p of priorities" [nzValue]="p" [nzLabel]="p"></nz-option>
+                            </nz-select>
+                        </nz-form-control>
+                    </nz-form-item>
                 </div>
-            </form>
-        </nz-card>
+                <div nz-col [nzSpan]="12" [nzXs]="24">
+                    <nz-form-item>
+                        <nz-form-label nzFor="image">Attachments (Optional)</nz-form-label>
+                        <nz-form-control>
+                            <nz-upload [nzBeforeUpload]="beforeUpload" [(nzFileList)]="fileList" [nzMultiple]="true"
+                                [nzLimit]="5" class="upload-container">
+                                <button nz-button type="button" nzSize="large" style="width: 100%;">
+                                    <span nz-icon nzType="upload"></span>
+                                    Upload Images (Max 5)
+                                </button>
+                            </nz-upload>
+                        </nz-form-control>
+                    </nz-form-item>
+                </div>
+                <div nz-col [nzSpan]="24">
+                    <nz-form-item>
+                        <nz-form-control>
+                            <button nz-button nzType="primary" [nzLoading]="isLoading()" htmlType="submit" nzBlock
+                                nzSize="large" class="submit-btn">
+                                Submit Issue
+                            </button>
+                        </nz-form-control>
+                    </nz-form-item>
+                </div>
+            </div>
+        </form>
     </div>
 </div>
